--- a/FBKVOControllerLab/FBKVOControllerLab-Info.plist
+++ b/FBKVOControllerLab/FBKVOControllerLab-Info.plist
@@ -27,7 +27,7 @@
 	<key>NSHumanReadableCopyright</key>
 	<string>Copyright © 2014 ___FULLUSERNAME___. All rights reserved.</string>
 	<key>NSMainNibFile</key>
-	<string>MainMenu</string>
+	<string>FBKMainMenu</string>
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
 </dict>
